[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto_tools"
version = "2.0.2"
authors = [
  { name="Jason Piszcyk", email="Jason.Piszcyk@gmail.com" },
]
description = "Cryptography Tools"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "cryptography",
  "pytest",
]

[project.urls]
"Homepage" = "https://github.com/JasonPiszcyk/CryptoTools"
"Bug Tracker" = "https://github.com/JasonPiszcyk/CryptoTools/issues"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
